fixed auto overflow and changed the classname in notifications

--- a/cloud-haven-react-app/src/App.css
+++ b/cloud-haven-react-app/src/App.css
@@ -19,5 +19,5 @@
    background-color: white;
    border-top-left-radius: 20px;
    display: block;
-   overflow: hidden;
+   overflow: auto;
 }
