--- a/cloud-haven-react-app/src/components/Notifications/NotificationBar.css
+++ b/cloud-haven-react-app/src/components/Notifications/NotificationBar.css
@@ -37,7 +37,7 @@
     left: 0.2em;
 }
 
-.ShouldntNeedThisClass {
+.NotifTitle {
     position: relative;
     bottom: 1.3em;
 }
